--- a/src/app/register-component/register-component.component.html
+++ b/src/app/register-component/register-component.component.html
@@ -14,4 +14,4 @@
      Already have an account ? SIGN IN
     </a>
   </div><!-- /card-container -->
-</div><!-- /container -->F
+</div><!-- /container -->
