--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<router-outlet></router-outlet>
+<div class="container bg-primary">
+  <div class="jumbotron text-center" style="background-color: #C73E1D !important;">
+    <h1>Welcome to ECS</h1>
+  </div>
+  <hr height="10px">
+  <div class="row">
+    <div class="col-lg-8">
+      <h2>About Us</h2>
+      <p class="glyphicon-text-color"> This will show about us</p>
+    </div>
+    <div class="col-lg-4">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+
