--- a/src/app/login/login-component.component.css
+++ b/src/app/login/login-component.component.css
@@ -40,7 +40,6 @@
   border-radius: 50%;
 }
 
-
 .form-signin #inputEmail,
 .form-signin #inputPassword {
   direction: ltr;
@@ -68,8 +67,8 @@
 .form-signin .form-control:focus {
   border-color: #316d67;
   outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgb(104, 145, 162);
 }
 
 .btn.btn-signin {
@@ -82,21 +81,21 @@
   -webkit-border-radius: 3px;
   border-radius: 3px;
   border: none;
-  color:#ffffff;
+  color: #ffffff;
   -o-transition: all 0.218s;
   -moz-transition: all 0.218s;
   -webkit-transition: all 0.218s;
   transition: all 0.218s;
 }
 
-a:hover, a:visited, a:link, a:active
-{
+a:hover, a:visited, a:link, a:active {
   text-decoration: none;
 }
 
 #remember {
   color: #ffffff;
 }
+
 .forgot-password {
   color: #ffffff;
 }
@@ -104,6 +103,7 @@ a:hover, a:visited, a:link, a:active
 .register {
   color: #ffffff;
 }
+
 .register-now {
   margin-top: 5px;
 }
