--- a/src/app/login/login-component.component.html
+++ b/src/app/login/login-component.component.html
@@ -1,3 +1,6 @@
+<div class="container-fluid back" >
+  <div class="row">
+    <div class="col-md-12">
 <div class="card card-container">
   <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
   <p id="profile-name" class="profile-name-card"></p>
@@ -23,5 +26,8 @@
       Not Registered yet ? SIGN UP
     </a>
   </div>
+</div>
+      <div class="foot"></div>
 </div><!-- /card-container -->
-
+  </div>
+</div>
