--- a/src/app/preregister/preregister-component.component.html
+++ b/src/app/preregister/preregister-component.component.html
@@ -1,5 +1,8 @@
+<div class="container-fluid back" >
+<div class="row" >
+<div class="col-md-12">
 <div xmlns="http://www.w3.org/1999/html">
-  <div class="card card-container">
+  <div class="card card-container" #form>
     <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin">
@@ -15,6 +18,15 @@
     <a routerLink="/login" class="register">
       Already registered ? SIGN IN
     </a>
+    </div>
+  <div class ="foot">
+
   </div>
+  <div class="fullpage" hidden #verify>
+  <p>A Verification mail has been sent to your mail id.Please check to activate account.</p>
+  </div>
+</div>
+</div>
+</div>
 </div>
 
