--- a/src/app/register-user/register-user.component.html
+++ b/src/app/register-user/register-user.component.html
@@ -1,3 +1,5 @@
+<div class="container-fluid back" >
+  <div class="row">
 <div class="card card-container" #registerForm>
   <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"/>
   <p id="profile-name" class="profile-name-card"></p>
@@ -31,6 +33,9 @@
   <a routerLink="/login" class="register">
     Already have an account ? SIGN IN
   </a>
+</div>
+    <div class="foot"></div>
+  </div>
 </div>
 
 
