--- a/src/app/login/login-component.component.css
+++ b/src/app/login/login-component.component.css
@@ -2,7 +2,15 @@
 .card-container.card {
   max-width: 350px;
 }
-
+.back{
+  background-image: url('desktop18.jpg');
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  background-size: cover;
+}
+.foot{
+  height: 150px;
+}
 .btn {
   font-weight: 700;
   height: 36px;
@@ -20,7 +28,7 @@
   /* just in case there no content*/
   padding: 20px 25px 30px;
   margin: 0 auto 25px;
-  margin-top: 70px;
+  margin-top: 130px;
   /* shadows and rounded borders */
   -moz-border-radius: 20px;
   -webkit-border-radius: 20px;
